# docChain

./: .gitignore  README.md
client-Desktop/: CMakeLists.txt  httphandler.cpp  httphandler.h  inmemoryblockchain.cpp  inmemoryblockchain.h  link.cpp  link.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  signingcalculation.h  signinghandler.cpp  signinghandler.h  signingmanager.cpp  signingmanager.h
docJsonServer/: CMakeLists.txt  author.cpp  author.h  authorfacade.cpp  authorfacade.h  iauthors.cpp  iauthors.h  iblockchain.h  inmemoryauthors.cpp  inmemoryauthors.h  inmemoryblockchain.cpp  inmemoryblockchain.h  link.cpp  link.h  main.cpp  signingcalculation.cpp  signingmanager.cpp  signingmanager.h
